Fix overflow on new packs page

--- a/frontend/pages/labels/NewLabelPage/_styles.scss
+++ b/frontend/pages/labels/NewLabelPage/_styles.scss
@@ -1,9 +1,12 @@
 .new-label-page {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  overflow: visible;
   &__header {
     display: flex;
     flex-direction: column;
     gap: $pad-xsmall;
-    margin-bottom: $pad-large;
   }
   &__page-description {
     margin: 0;
